--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,8 +19,10 @@
         android:id="@+id/show_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:textAlignment="center"
+        android:layout_below="@id/button_toast"
         android:background="#FFFF00"
         android:gravity="center|center_vertical"
         android:text="@string/Count_initial_value"
@@ -35,9 +37,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/Button_label_count"
-
+        android:layout_below="@id/show_count"
+        android:layout_centerHorizontal="true"
         android:onClick="countUp"/>
 
 
 
-</LinearLayout>
+</RelativeLayout>
